--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
-
-</head>
-<body>
  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
- <div id="map" style="height: 100%">
+<style>
+html,body {
+height: 100%;
+margin: 0;
+}
+#map {
+height: 100%;
+width: 100%;
+}
+</style}
+</head>
+<body>
+ <div id="map">
 </div>
 <script>
 var map = L.map('map').setView([51.505, -0.09], 13);
