--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@ width: 100%;
  <div id="map">
 </div>
 <script>
-var map = L.map('map').setView([51.505, -0.09], 13);
+var map = L.map('map').setView([38.9547302792848, -95.25518411352884], 16);
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
+var marker = L.marker([38.95681241602244, -95.24479365020387]).addTo(map);
+marker.bindPopup("<b>Hello IDRH Community!</b><br>We are in Watson for a workshop.");
 </script>
 </body>
